# overkill

./: .gitignore  LICENSE  README.md  package.json  prompt-template.md  pyproject.toml  requirements.txt  svelte.config.js  tsconfig.json  wc-plan.md
.github/ISSUE_TEMPLATE/: contested-claim.yml  data-correction.yml  missing-source.yml  new-episode-request.yml
.github/workflows/: build-site.yml  deploy-pages.yml  validate-data.yml
overkill/: __init__.py  cli.py  demo_server.py  discovery.py  ingest_markdown.py  models.py  relationships.py  taxonomy.py  validation.py
overkill/data/: country_short_names.json  side_country_map.json  side_overrides.json
research/input/gptpro/afghanistan_war_2001_2021/: assumptions.json  claims.json  conflict.json  episodes.json  estimates.json  open_questions.json  sources.json
research/input/gptpro/aiw1948/: assumptions.json  claims.json  conflict.json  episodes.json  estimates.json  open_questions.json  sources.json
research/input/gptpro/algerian-war-1954-1962/: assumptions.json  claims.json  conflict.json  episodes.json  estimates.json  open_questions.json  sources.json
research/input/gptpro/bosnian-war/: claims.json  (+6 more)
scripts/export/: export_demo_data.py
scripts/ingest/: ingest_markdown_bundles.py
scripts/validate/: validate_bundle.py
src/: app.html
src/routes/: +page.svelte
static/: index.html
static/demo/: app.js  index.html  styles.css
static/demo/js/: chart.js  data.js  map.js  render.js  router.js  utils.js
tests/unit/: test_bundle_validation.py  test_discovery.py  test_ingest_markdown.py  test_taxonomy.py
(+600 files in other folders)
