[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "overkill"
version = "0.1.0"
description = "Validation and build tooling for the Overkill DR research explorer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.11,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
]

[project.scripts]
overkill = "overkill.cli:main"

[tool.setuptools]
packages = ["overkill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
